--- a/index.html
+++ b/index.html
@@ -164,6 +164,169 @@
     </div>
     <!-- ============ about-us-area-end ================= -->
 
+    <!-- ============ service-are-start ================= -->
+    <div class="service-area mt-100 mb-65">
+        <div class="container">
+            <h2 data-aos="zoom-in">核心功能</h2>
+            <p data-aos="zoom-in">我们提供全面的睡眠管理功能，帮助您更好地了解和改善睡眠质量</p>
+            <div class="service-info mt-70">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-web-development"></i>
+                            <h4>睡眠记录</h4>
+                            <p>精准记录每日睡眠数据，包括入睡时间、醒来时间、睡眠时长等关键指标</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-design-thinking"></i>
+                            <h4>睡眠分析</h4>
+                            <p>基于AI算法，深入分析您的睡眠模式，发现潜在问题</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-settings"></i>
+                            <h4>个性化建议</h4>
+                            <p>根据您的睡眠数据，提供个性化的改善建议</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-digital-marketing"></i>
+                            <h4>睡眠知识库</h4>
+                            <p>提供专业的睡眠知识，帮助您了解睡眠科学</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-application"></i>
+                            <h4>睡眠社区</h4>
+                            <p>与同样关注睡眠健康的用户交流经验</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="service-text text-center">
+                            <i class="flaticon-social-media"></i>
+                            <h4>专业评估</h4>
+                            <p>提供专业的睡眠质量评估报告</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ============ service-are-end =================== -->
+
+    <!-- ============ testimonial-area-start =========== -->
+    <div class="testimonial-area theme-bg pt-100 pb-125">
+        <div class="container">
+            <h2 data-aos="flip-right text-center">用户评价</h2>
+            <p class="text-center">听听我们的用户如何评价睡眠管理系统</p>
+            <div class="testimonial-info  mt-70">
+                <div class="client-area">
+                    <div class="client-info">
+                        <div class="client-image">
+                            <img src="assets/img/client-1.png" alt="">
+                        </div>
+                        <div class="client-title">
+                            <h4>张先生</h4>
+                            <p>IT工程师</p>
+                        </div>
+                    </div>
+                    <span>使用睡眠管理系统后，我能够更好地了解自己的睡眠模式，系统提供的建议也帮助我改善了睡眠质量。</span>
+                </div>
+                <div class="client-area">
+                    <div class="client-info">
+                        <div class="client-image">
+                            <img src="assets/img/client-2.png" alt="">
+                        </div>
+                        <div class="client-title">
+                            <h4>李女士</h4>
+                            <p>教师</p>
+                        </div>
+                    </div>
+                    <span>特别喜欢睡眠记录功能，简单易用，数据分析也很专业，让我对自己的睡眠有了全新的认识。</span>
+                </div>
+                <div class="client-area">
+                    <div class="client-info">
+                        <div class="client-image">
+                            <img src="assets/img/client-3.png" alt="">
+                        </div>
+                        <div class="client-title">
+                            <h4>王先生</h4>
+                            <p>自由职业者</p>
+                        </div>
+                    </div>
+                    <span>睡眠社区很有帮助，可以和其他用户交流经验，学习到很多改善睡眠的小技巧。</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ============= testimonial-area-end ============= -->
+
+    <!-- ============= blog-area-start ================== -->
+    <div class="blog-area mt-100 mb-70">
+        <div class="container">
+            <h2 data-aos="zoom-in">最新睡眠资讯</h2>
+            <p  data-aos="zoom-in">了解最新的睡眠研究成果和健康建议</p>
+            <div class="blog-info mt-50">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12">
+                        <div class="single-blog">
+                            <div class="blog-image">
+                                <a href="blog-details.html"><img src="assets/img/blog-2.png" class="img-fluid" alt=""></a>
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">
+                                    <a href="#"><i class="far fa-calendar-alt"></i> <span>2025年3月12日</span></a>
+                                    <a href="#"><i class="far fa-comments"></i> <span>10 评论</span></a>
+                                </div>
+                                <h3 class="blog-title"><a href="#">如何建立健康的睡眠习惯</a></h3>
+                                <p>了解建立健康睡眠习惯的7个关键步骤，改善您的睡眠质量...</p>
+                                <a href="blog-details.html" class="btn blog-btn">阅读更多</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12">
+                        <div class="single-blog">
+                            <div class="blog-image">
+                                <a href="blog-details.html"><img src="assets/img/blog-1.png" class="img-fluid" alt=""></a>
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">
+                                    <a href="#"><i class="far fa-calendar-alt"></i> <span>2025年3月10日</span></a>
+                                    <a href="#"><i class="far fa-comments"></i> <span>15 评论</span></a>
+                                </div>
+                                <h3 class="blog-title"><a href="#">深度睡眠的重要性</a></h3>
+                                <p>探索深度睡眠对身体和心理健康的影响，以及如何获得更多深度睡眠...</p>
+                                <a href="blog-details.html" class="btn blog-btn">阅读更多</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12">
+                        <div class="single-blog">
+                            <div class="blog-image">
+                                <a href="blog-details.html"><img src="assets/img/blog-3.png" class="img-fluid" alt=""></a>
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">
+                                    <a href="#"><i class="far fa-calendar-alt"></i> <span>2025年3月8日</span></a>
+                                    <a href="#"><i class="far fa-comments"></i> <span>8 评论</span></a>
+                                </div>
+                                <h3 class="blog-title"><a href="#">睡前放松技巧</a></h3>
+                                <p>学习5种有效的睡前放松技巧，帮助您更快入睡，提高睡眠质量...</p>
+                                <a href="blog-details.html" class="btn blog-btn">阅读更多</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ============= blog-area-end ==================== -->
+
     <!-- 其他页面内容省略... -->
 
     <!-- JS here -->
