--- a/community.html
+++ b/community.html
@@ -77,9 +77,9 @@
     <!-- ============== main-content-start ============== -->
     <div class="main-content">
         <div class="container">
-            <h1>睡眠社区</h1>
-            <div class="community-tabs">
-                <ul class="nav nav-tabs">
+            <h1 data-aos="fade-up" data-aos-duration="800">睡眠社区</h1>
+            <div class="community-tabs" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <ul class="nav nav-tabs" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#forum">论坛/讨论区</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#groups">群组</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#blogs">博客文章</a></li>
