--- a/sleep_video.html
+++ b/sleep_video.html
@@ -81,10 +81,16 @@
                 <div class="col-lg-6">
                     <div class="video-player-container">
                         <div class="video-wrapper">
-                            <video id="sleepVideo" class="main-video" controls>
-                                <source src="assets/videos/sleep-meditation.mp4" type="video/mp4">
-                                您的浏览器不支持视频播放。
-                            </video>
+                            <iframe 
+                                id="bilibiliVideo"
+                                src="//player.bilibili.com/player.html?bvid=BV1fS4y117u7"
+                                scrolling="no"
+                                border="0"
+                                frameborder="no"
+                                framespacing="0"
+                                allowfullscreen="true"
+                                style="width:100%;height:100%;position:absolute;top:0;left:0">
+                            </iframe>
                         </div>
                         <div class="video-info">
                             <h3>睡前放松冥想</h3>
@@ -283,7 +289,12 @@
         background: rgba(255, 255, 255, 0.1);
         border-radius: 15px;
         overflow: hidden;
-        margin-bottom: 20px;
+        margin: 0 auto 20px;
+        width: 80%;
+        max-width: 800px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .video-wrapper {
@@ -304,12 +315,15 @@
 
     .video-info {
         padding: 20px;
+        background: rgba(255, 255, 255, 0.8);
+        width: 100%;
     }
 
     .video-info h3 {
         color: #333;
         font-size: 1.5rem;
         margin-bottom: 10px;
+        opacity: 0.9;
     }
 
     .video-description {
@@ -317,6 +331,7 @@
         font-size: 0.9rem;
         line-height: 1.5;
         margin-bottom: 0;
+        opacity: 0.8;
     }
 
     /* 响应式调整 */
