--- a/community.html
+++ b/community.html
@@ -98,12 +98,12 @@
                                     <div class="category-item">
                                         <h4>失眠问题</h4>
                                         <p>讨论失眠原因和解决方案</p>
-                                        <a href="#" class="btn btn-primary">查看话题</a>
+                                        <a href="forum-topic.html" class="btn btn-primary">查看话题</a>
                                     </div>
                                     <div class="category-item">
                                         <h4>睡眠呼吸暂停</h4>
                                         <p>分享治疗经验和建议</p>
-                                        <a href="#" class="btn btn-primary">查看话题</a>
+                                        <a href="forum-topic.html" class="btn btn-primary">查看话题</a>
                                     </div>
                                     <!-- 更多主题... -->
                                 </div>
