--- a/community.html
+++ b/community.html
@@ -74,15 +74,30 @@
     </header>
     <!-- ============= header-area-end ====================== -->
 
+    <!-- ========== breadcrumbs-area-start ============== -->
+    <div class="breadcrumbs-area text-center">
+        <div class="breadcrumbs-wrapper pt-110 pb-110">
+            <div class="mk-page-title">
+                <h2>睡眠社区</h2>
+            </div>
+            <nav class="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a> <i class="flaticon-right-arrow-angle"></i></li>
+                    <li class="breadcrumb-item active" aria-current="page">community</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+    <!-- =========== breadcrumbs-area-end ================ -->
+
     <!-- ============== main-content-start ============== -->
     <div class="main-content">
         <div class="container">
-            <h1 data-aos="fade-up" data-aos-duration="800">睡眠社区</h1>
+            <!-- <h1 data-aos="fade-up" data-aos-duration="800">睡眠社区</h1> -->
             <div class="community-tabs" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <ul class="nav nav-tabs" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#forum">论坛/讨论区</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#groups">群组</a></li>
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#blogs">博客文章</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#qna">专家问答</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#diary">睡眠日记</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#challenges">挑战活动</a></li>
@@ -158,38 +173,6 @@
                         </div>
                     </div>
 
-                    <!-- 博客文章 -->
-                    <div id="blogs" class="tab-pane fade">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <div class="blog-list">
-                                    <h3>最新文章</h3>
-                                    <div class="blog-item">
-                                        <h4>改善睡眠质量的10个技巧</h4>
-                                        <p>专业睡眠顾问分享实用建议...</p>
-                                        <a href="#" class="btn btn-primary">阅读全文</a>
-                                    </div>
-                                    <div class="blog-item">
-                                        <h4>褪黑素的正确使用方法</h4>
-                                        <p>了解褪黑素的利弊和使用注意事项...</p>
-                                        <a href="#" class="btn btn-primary">阅读全文</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="blog-categories">
-                                    <h3>文章分类</h3>
-                                    <ul>
-                                        <li>睡眠科学</li>
-                                        <li>助眠技巧</li>
-                                        <li>产品评测</li>
-                                        <li>专家观点</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                     <!-- 专家问答 -->
                     <div id="qna" class="tab-pane fade">
                         <div class="row">
@@ -215,8 +198,14 @@
                                             <label>问题描述</label>
                                             <textarea class="form-control" rows="3"></textarea>
                                         </div>
-                                        <button type="submit" class="btn btn-primary">提交问题</button>
+                                    <button type="submit" class="btn btn-primary">提交问题</button>
                                     </form>
+                                    <div class="mt-5 mb-4 text-center">
+                                        <a href="ai-assistant.html" class="btn btn-outline-primary btn-lg">
+                                            <i class="fas fa-robot mr-2"></i>
+                                            问问AI助手的建议吧
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
