修改了一些bug

--- a/tracker.html
+++ b/tracker.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.10/main.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.10/main.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/tracker.css">
+    <link rel="stylesheet" href="assets/css/hearder-area.css">
     
     <style>
         /* 日历容器 */
@@ -87,11 +89,11 @@
                                     <li class="dropdown">
                                         <a href="community.html">交流社区 <i class="fas fa-chevron-down"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#forum">论坛</a></li>
-                                            <li><a href="#groups">群组</a></li>
-                                            <li><a href="#qna">专家问答</a></li>
-                                            <li><a href="#diary">睡眠日记</a></li>
-                                            <li><a href="#challenges">挑战活动</a></li>
+                                            <li><a href="community.html">论坛</a></li>
+                                            <li><a href="community.html">群组</a></li>
+                                            <li><a href="community.html">专家问答</a></li>
+                                            <li><a href="community.html">睡眠日记</a></li>
+                                            <li><a href="community.html">挑战活动</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -116,7 +118,6 @@
         </div>
     </header>
     <!-- ============= header-area-end ====================== -->
-
     <!-- ============== main-content-start ============== -->
     <div class="main-content">
     <div class="container">
