修改了社区跳转链接bug

--- a/community.html
+++ b/community.html
@@ -215,7 +215,7 @@
                                     <button type="submit" class="btn btn-primary">提交问题</button>
                                     </form>
                                     <div class="mt-5 mb-4 text-center">
-                                        <a href="ai-assistant.html" class="btn btn-outline-primary btn-lg">
+                                        <a href="ai-assistant.html" class="btn btn-outline-primary btn-lg" onclick="window.location.href='ai-assistant.html'">
                                             <i class="fas fa-robot mr-2"></i>
                                             问问AI助手的建议吧
                                         </a>
